# lightdock

./: .coveragerc  .flake8  .gitignore  .pytest.ini  .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  code_of_conduct  pack.sh  pyproject.toml  run_tests.sh  setup.cfg  setup.py  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
docs/: 1AZP.md  2UUY.md  4G6M.md  FAQ.md  Makefile  README.md  bin.rst  bin.test.post.rst  bin.test.rst  conf.py  index.rst  lightdock.error.rst  lightdock.gso.exec.j1.rst  lightdock.gso.exec.j2.rst  lightdock.gso.exec.j3.rst  lightdock.gso.exec.j4.rst  lightdock.gso.exec.j5.rst  lightdock.gso.exec.rst  lightdock.gso.rst  lightdock.gso.searchspace.cython.rst  lightdock.gso.searchspace.rst  lightdock.mathutil.c.rst  lightdock.mathutil.cython.rst  lightdock.mathutil.rst  lightdock.parallel.rst  lightdock.pdbutil.rst  lightdock.prep.rst  lightdock.rotamer.rst  lightdock.rst  lightdock.scoring.cpydock.data.rst  lightdock.scoring.cpydock.energy.c.rst  lightdock.scoring.cpydock.energy.rst  lightdock.scoring.cpydock.rst  lightdock.scoring.dfire.cython.rst  lightdock.scoring.dfire.rst  lightdock.scoring.dfire2.c.rst  lightdock.scoring.dfire2.cython.rst  lightdock.scoring.dfire2.rst  lightdock.scoring.fastdfire.c.rst  lightdock.scoring.fastdfire.rst  (+31 more)
examples/: README.md
examples/1AZP/: lightdock.info  lightdock_1AZP_A_h.pdb.xyz.npy  lightdock_1AZP_B.pdb.xyz.npy  lightdock_lig.nm.npy  lightdock_rec.nm.npy  restraints.list  setup.json
examples/2UUY/: lightdock.info  setup.json
examples/4G6M/: lightdock_4G6M_lig.pdb.xyz.npy  lightdock_4G6M_rec.pdb.xyz.npy  lightdock_lig.nm.npy  lightdock_rec.nm.npy  (+2 more)
lightdock/: __init__.py  constants.py  version.py
setup/: setup.sh
symlightdock/: constants.py
(+689 files in other folders)
